[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/fast_options/scripts/color_widget.gd" type="Script" id=1]

[node name="color_widget" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="name" type="Label" parent="."]
margin_top = 293.0
margin_right = 510.0
margin_bottom = 307.0
size_flags_horizontal = 3
text = "Color Name"

[node name="value" type="HBoxContainer" parent="."]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="preview" type="ColorRect" parent="value"]
margin_right = 32.0
margin_bottom = 600.0
rect_min_size = Vector2( 32, 32 )

[node name="rgb" type="GridContainer" parent="value"]
margin_left = 36.0
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
columns = 2

[node name="redLabel" type="Label" parent="value/rgb"]
margin_top = 1.0
margin_right = 39.0
margin_bottom = 15.0
text = "Red"

[node name="redSlider" type="HSlider" parent="value/rgb"]
margin_left = 43.0
margin_right = 474.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 1.0

[node name="greenLabel" type="Label" parent="value/rgb"]
margin_top = 21.0
margin_right = 39.0
margin_bottom = 35.0
text = "Green"

[node name="greenSlider" type="HSlider" parent="value/rgb"]
margin_left = 43.0
margin_top = 20.0
margin_right = 474.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 1.0

[node name="blueLabel" type="Label" parent="value/rgb"]
margin_top = 41.0
margin_right = 39.0
margin_bottom = 55.0
text = "Blue"

[node name="blueSlider" type="HSlider" parent="value/rgb"]
margin_left = 43.0
margin_top = 40.0
margin_right = 474.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 1.0

[connection signal="value_changed" from="value/rgb/redSlider" to="." method="_on_color_changed"]
[connection signal="value_changed" from="value/rgb/greenSlider" to="." method="_on_color_changed"]
[connection signal="value_changed" from="value/rgb/blueSlider" to="." method="_on_color_changed"]
